# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  Project.xcconfig  README.md  compile_commands.json  config.make  vcpkg.json
.cache/clangd/index/: GameOfLifeKernel.cpp.C1C11738B5E7DFB7.idx  GameOfLifeKernel.h.564CCD664AD29B43.idx  main.cpp.2D36B64B772B0699.idx  main.h.3C6F326AC0644E97.idx
GameOfLife.xcodeproj/: project.pbxproj
GameOfLife.xcodeproj/project.xcworkspace/xcshareddata/: GameOfLife.xcscmblueprint
GameOfLife.xcodeproj/xcshareddata/xcschemes/: GameOfLife Debug.xcscheme  GameOfLife Release.xcscheme
cmake/: cli.cmake  gui.cmake
game-of-life.xcodeproj/: project.pbxproj
game-of-life.xcodeproj/xcshareddata/xcschemes/: game-of-life Debug.xcscheme  game-of-life Release.xcscheme
lib/gol/: CMakeLists.txt  GameOfLifeKernel.cpp
src/: GameOfLifeKernel.cpp  GameOfLifeKernel.h  Makefile  main.cpp  main.h  ofApp.cpp  ofApp.h
src/cli/: CMakeLists.txt  main.cpp  main.h
src/gui/: CMakeLists.txt  app.cpp  app.h  config.h  main.cpp  main.h
src/lib/: GameOfLifeKernel.cpp  GameOfLifeKernel.h  config.h
